syntax = "proto3";
package hextech;
option go_package = "grpc-server/proto;hextech";

service Broker {
  rpc ProcessCommand(CommandRequest) returns (CommandResponse);
  rpc GetClock(ClockRequest) returns (ClockResponse);
  rpc ObtenerReloj(ClockRequest) returns (ClockResponse);
  rpc NotificarInconsistencia(InconsistenciaRequest) returns (InconsistenciaResponse);
}

message CommandRequest {
  string command = 1;
  string region = 2;
  string productName = 3;
  string value = 4; // Puede ser vacio
  int32 server = 5;
}

message CommandResponse {
  int32 randomValue = 1; // Valor aleatorio entre 0 y 2
  string message = 2;
}

message ClockRequest {
  string region = 1;
}

message ClockResponse {
  repeated int32 clock = 1;
  int32 servidor = 2;
}

message EmptyRequest {}

message InconsistenciaRequest {
  string region = 1;
  string mensaje = 2; // Mensaje de la inconsistencia
}

message InconsistenciaResponse {
  string status = 1; // Confirmación de recepción
}
